@startuml smarter_hub_modelo_dados_resumo
hide circle
left to right direction
scale max 1200 width
skinparam shadowing false
skinparam backgroundColor white
skinparam linetype ortho
skinparam dpi 110
skinparam defaultFontName Segoe UI
skinparam defaultFontSize 12
skinparam classAttributeIconSize 0
skinparam ArrowColor #1F3A68
skinparam ClassBorderColor #1F3A68
skinparam ClassBackgroundColor #EEF3FA

class USER {
  +id <<PK>>
  +role
  +hasAccessTotal
}

class PROFILE {
  +userId <<FK>>
  +workCountry
}

class TEAM {
  +id <<PK>>
  +parentTeamId <<FK>>
}

class TEAM_MEMBERSHIP {
  +userId <<FK>>
  +teamId <<FK>>
  +isApprover
}

class VACATION {
  +id <<PK>>
  +userId <<FK>>
  +contextTeamId <<FK>>
  +status
  +versionOfId <<FK>>
}

class VACATION_APPROVAL {
  +vacationId <<FK>>
  +approverId <<FK>>
  +approvalLevel
  +status
}

class EMPLOYEE_ADMISSION {
  +id <<PK>>
  +status
  +submissionTokenHash
}

class USER_PERMISSION {
  +userId <<FK>>
  +permissionId <<FK>>
  +isEnabled
}

class PERMISSION_GRANT {
  +actorUserId <<FK>>
  +targetUserId <<FK>>
  +action
}

class HOUR_BANK_ENTRY {
  +userId <<FK>>
  +hours
  +type
}

class NOTIFICATION {
  +userId <<FK>>
  +isRead
}

USER "1" -- "1" PROFILE
USER "1" -- "0..*" TEAM_MEMBERSHIP
TEAM "1" -- "0..*" TEAM_MEMBERSHIP
TEAM "1" -- "0..*" TEAM : hierarquia

USER "1" -- "0..*" VACATION
VACATION "1" -- "0..*" VACATION_APPROVAL
VACATION "1" -- "0..*" VACATION : versões

USER "1" -- "0..*" EMPLOYEE_ADMISSION
USER "1" -- "0..*" USER_PERMISSION
USER "1" -- "0..*" PERMISSION_GRANT

USER "1" -- "0..*" HOUR_BANK_ENTRY
USER "1" -- "0..*" NOTIFICATION

note bottom
Resumo de dados: entidades e relações críticas
para autorização, aprovações e operação.
end note
@enduml
